# elkcreek

./: .gitignore  a010_combine_catalogs.py  a020_filter_events.py  a030_add_local_info.py  a040_add_geometry.py  a050_add_longwall_info.py  b010_extract_bpc_data.py  b020_extract_support_can.py  c010_add_lat_lon_to_stations.py  d010_make_pyrocko_catalog.py  d020_make_pyrocko_inv.py  d025_make_station_resp.py  d030_make_pyrocko_picks.py  d040_make_displacement_seismograms.py  d050_make_ahfullgreen.py  d060_make_grond_config.py  d070_run_grond.py  local.py  make.py  p010_mine_maps.py  p020_magnitudes.py  p020_plot_aftershocks.py  p030_dot_map.py  p040_spatial_event_count.py  p050_plot_aftershocks.py  p050_plot_event_2_instrumentation_response.py  p050_plot_pressure_response.py  p060_e2_panel1_seismic_progression.py  p060_plot_displacement_response.py  p070_e2_panel2_seismicity.py  p080_mt_decomp_and_plot.py  p090_plot_event_2_instrumentation_response.py  progress_test.py  pyproject.toml  readme.md
data/raw/: README.md  elk_creek_coordinates.wkt  face_positions.csv  instrumentation.csv  station_list.csv  volumes.json
data/raw/dxfs/: anomalous_zones.dxf  faults.dxf  overburden.dxf  placeholder_workings.dxf  production.dxf  sig_events.dxf  topo.dxf  ug_instrumentation.dxf
data/raw/earth_models/: homogeneous.csv
data/raw/events/: burst_events.csv  burst_events.qml
data/raw/events/burst_waveforms/: event_1.mseed
data/raw/events/ims_events/: 2009-11_ims.parquet  2009-12_ims.parquet  2010-01_ims.parquet  2010-02_ims.parquet  2010-03_ims.parquet  (+37 more)
data/raw/pyrocko_templates/: ahfullgreen_config  config  grond_config  qseis
src/elkcreek/: __init__.py  dxf.py  events.py  excel.py  grid.py  grond.py  longwall.py  mt.py  plot.py  util.py
tests/: conftest.py  test_dxf.py  test_events.py  test_grid.py
tests/test_data/: cat_for_filtering.csv  ug_instrumentation.dxf
(+34 files in other folders)
